k8s-manifests/polybot/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polybot
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polybot
  template:
    metadata:
      labels:
        app: polybot
    spec:
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 8.8.8.8
          - 1.1.1.1
      containers:
      - name: polybot
        image: ameerarayan/polybot-dev:97
        ports:
        - containerPort: 8443
