k8s-manifests/polybot/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polybot
spec:
  ingressClassName: nginx
  rules:
    - host: polybot.ameera.fursa.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: polybot-service
                port:
                  number: 8443
